# daisy-pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-config.yaml.exemple  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.py
daisy_pre_commit_hooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
github/workflows/: lint-on-push.yml  test.yml
scripts/: check_duplicate_ids.py  check_duplicate_method_names.py  check_for_return.py  check_model_file.py  check_module_names.py  check_odoo_version.py  check_print_usage.py  check_report_template.py  check_requirements.py  check_sql.py  check_sudo_comment.py  check_xml_filenames.py
